--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "url-loader": "^4.1.1"
   },
   "eslintConfig": {
     "root": true,
