--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/compiler-sfc": "^3.4.15",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "^3.4.15",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
